2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Spread anchor value to more methods in link functors.

	* scribo/primitive/link/internal/find_link.hh,
	* scribo/primitive/link/internal/link_functor_base.hh,
	* scribo/primitive/link/internal/link_single_dmax_ratio_base.hh: Here.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce a logger class.

	* scribo/debug/logger.hh: New.

	* scribo/toolchain/internal/content_in_doc_functor.hh,
	* scribo/toolchain/internal/text_in_doc_functor.hh,
	* scribo/toolchain/nepomuk/text_extraction.hh,
	* scribo/toolchain/text_in_doc.hh,
	* src/content_in_doc.cc,
	* src/pbm_text_in_doc.cc,
	* src/primitive/extract/separators_nonvisible.cc Make use of that
	class for saving debug images.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce a logger class.

	* scribo/debug/logger.hh: New.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce new anchors.

	* scribo/core/tag/anchor.hh: New anchors.

	* scribo/filter/internal/alignment_angle.hh,
	* scribo/primitive/link/internal/compute_anchor.hh: Make use of
	that new anchors.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename document serializer base class.

	* scribo/core/internal/doc_xml_serializer.hh: Rename as...
	* scribo/core/internal/doc_serializer.hh: ... this.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Update inheritance.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Store more information in scribo::document.

	* scribo/core/document.hh: Make a distinction between horizontal
	and vertical lines. Store the binary image.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh,
	* scribo/toolchain/internal/content_in_doc_functor.hh: Make use of
	that new methods and information.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>
